# simple_ffmpeg_player

./: CMakeLists.txt  README.md  compile.sh  simple_ffmpeg_player.cpp
